--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </li>
             <li>
                 <p>Javaのクラスを継承するキーワードは？</p>
-                <label><input name="java2" type="radio" value="1" /> extend</label><br />
+                <label><input name="java2" type="radio" value="1" /> extends</label><br />
                 <label><input name="java2" type="radio" value="2" /> inherit</label><br />
                 <label><input name="java2" type="radio" value="3" /> implements</label><br />
                 <label><input name="java2" type="radio" value="4" /> derives</label><br />
